# catnip-fcu

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
catnip_app/: app.json  package-lock.json  package.json  svgr.config.js
catnip_app/scripts/: test-bluetooth-gate.mjs  test-characteristics-codec.mjs  test-compatibility-migration.mjs  test-fire-selector-graphic-utils.mjs  test-postcard-codec-guards.mjs  test-profile-persistence.mjs  test-selector-mapping.mjs
catnip_app/src/app/: _layout.tsx  index.tsx
catnip_app/src/app/replicas/: [id].tsx  new.tsx  select-fcu.tsx
catnip_app/src/components/: BluetoothOffBlock.tsx  SearchableSelect.tsx  index.ts
catnip_app/src/components/fcu-profiles/: ConfirmModal.tsx  ProfileAssignmentRow.tsx  ProfileDropdown.tsx  ProfileLabel.tsx  index.ts
catnip_app/src/components/fire-selector/: AnimatedFireSelectorGraphic.tsx  FireSelectorGraphic.tsx  FireSelectorMappingCard.tsx  FireSelectorMappingCarousel.tsx  FireSelectorSlotPicker.tsx  FireSelectorUnmappedGraphic.tsx  LiveFireSelectorPanel.tsx  ResponsiveLiveFireSelectorPanel.tsx  fire-selector-graphic-utils.ts  index.ts
catnip_app/src/components/firemode/: FireModeConfigSchemaField.tsx  FireModeConfigSchemaForm.tsx  index.ts
catnip_app/src/components/form/: invalid-field-styles.ts
catnip_app/src/constants/: ble.ts
catnip_app/src/fcu-profiles/: assignments.ts  constants.ts  errors.ts  index.ts  migrate-compatibility-id.ts  mock-firemode-schemas.ts  mock-store.ts  persistence.ts  profile-names.ts  reassign-on-profile-delete.ts  store.ts  sync-default-profiles-from-fcu.ts  sync-profile-to-fcu.ts  types.ts
catnip_app/src/hooks/: index.ts  use-ble-connect.ts  use-ble-manager.ts  use-ble-scan.ts  use-bluetooth-gate.ts  use-catnip-fcu.ts  use-create-replica-fcu.ts  use-fcu-characteristics.ts  use-fcu-fire-mode.ts  use-fcu-profile-catalog-key.ts  use-fcu-profiles.ts  use-fcu-request.ts  use-fire-selector-assign.ts  use-fire-selector-graphic-size.ts  use-live-selector-rotation.ts  use-profile-fcu-sync.ts  use-replicas.ts  use-theme.ts
catnip_app/src/lib/: ble-manager.ts  ble-peripheral.ts  ble-permissions.ts  bluetooth-messages.ts  catnip-ble-client.ts  catnip-ble-errors.ts  catnip-ble-log.ts  fcu-compatibility.ts  fcu-connection-session.ts  firemode-config-utils.ts  request-bluetooth-enabled.ts  unpair-fcu.ts
catnip_app/src/messages/: codec.ts  index.ts  position.ts  replies.ts  requests.ts  types.ts
catnip_app/src/replicas/: constants.ts  errors.ts  fire-selector-layout.ts  fire-selector-pivot-math.ts  fire-selector-pivot.ts  fire-selector-pivots.json  fire-selector-replica-config.ts  fire-selector-sweep.ts  index.ts  persistence.ts  repository.ts  selector-mapping.ts  types.ts  validation.ts  weapon-metadata.ts
catnip_app/src/screens/: index.ts
catnip_app/src/screens/components/: Dropdown.tsx  Screen.tsx  index.ts
catnip_app/src/screens/replicas/: ConfigureReplicaMappingScreen.tsx  CreateReplicaScreen.tsx  EditProfileScreen.tsx  FireSelectorMappingStep.tsx  FireSelectorVerifyStep.tsx  NewProfileConfigScreen.tsx  NewProfileFireModeScreen.tsx  NewProfileNameScreen.tsx  ReplicaDetailScreen.tsx  index.ts  (+4 more)
catnip_app/src/theme/: ThemeProvider.tsx  index.ts  palettes.ts  types.ts
catnip_core/: Cargo.toml
catnip_core/.cargo/: config.toml
catnip_core/src/: ble.rs  firemode.rs  lib.rs
catnip_core/src/firemode/: macros.rs  mod.rs  table.rs
catnip_core/src/protocol/: codec.rs  mod.rs
catnip_core/src/requests/: errors.rs  macros.rs  mod.rs  push_events.rs
catnip_esp32/: Cargo.toml  build.rs  sdkconfig.defaults  sdkconfig.defaults.bt
catnip_esp32/.cargo/: config.toml  esp-idf-cfgs.toml
catnip_esp32/src/: bt_transport.rs  debug_console.rs  fire_selector.rs  lib.rs  protocol_trace.rs  server.rs  storage.rs
catnip_firemode_derive/: Cargo.toml
catnip_firemode_derive/src/: lib.rs
catnip_messages/: Cargo.toml
catnip_messages/src/: codec.rs  lib.rs  macros.rs  push_events.rs
engines/esp32-diy-shoebill-soe/: Cargo.toml
engines/esp32-diy-shoebill-soe/.cargo/: config.toml
engines/esp32-diy-shoebill-soe/src/: firemodes.rs  main.rs
engines/shoebill-soe/: Cargo.toml  build.rs  sdkconfig.defaults
engines/shoebill-soe/.cargo/: config.toml
engines/shoebill-soe/src/: main.rs
tools/fire_selector_pivot/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/fire_selector_pivot/src/: graphic-fit.ts  main.ts  style.css
(+5 files in other folders)
