[package]
name = "catnip_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
catnip_firemode_derive = { path = "../catnip_firemode_derive" }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
thiserror = "2.0.18"
uuid = { version = "1", features = ["serde", "v4"] }
paste = "1"