[package]
name = "catnip_esp32"
version = "0.1.0"
edition = "2024"

[features]
default = []
bt = []
experimental = ["esp-idf-svc/experimental"]

[package.metadata.esp-idf-sys]
mcu = "esp32"

[dependencies]
catnip_core = { path = "../catnip_core" }
catnip_messages = { path = "../catnip_messages" }
anyhow = "1.0.100"
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
  "std",
  "experimental",
  "alloc",
  "default",
] }

[build-dependencies]
embuild = "0.33"