[package]
name = "catnip_esp32"
version = "0.1.0"
edition = "2024"

[features]
default = ["esp-idf-svc/experimental"]

[package.metadata.esp-idf-sys]
mcu = "esp32"
# Paths are relative to the workspace root (see esp-idf-sys BUILD-OPTIONS.md).
esp_idf_sdkconfig_defaults = ["catnip_esp32/sdkconfig.defaults"]

[dependencies]
catnip_core = { path = "../catnip_core" }
anyhow = "1.0.100"
log = "0.4"
postcard = { version = "1.1", features = ["alloc"] }
enumset = { version = "1.1" }
serde = { version = "1" }
uuid = { version = "1", features = ["serde"] }
esp-idf-svc = { version = "0.51", features = [
  "std",
  "experimental",
  "alloc",
  "default",
] }

[build-dependencies]
embuild = "0.33"