[package]
name = "catnip_messages"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
catnip_core = {path = "../catnip_core"}
thiserror = "2.0.18"
anyhow = "1.0.100"
uuid = { version = "1", features = ["serde", "v4"] }
paste = "1"
